Fix margin on resume

--- a/src/pages/resume.mdx
+++ b/src/pages/resume.mdx
@@ -1,6 +1,6 @@
 import {Container} from 'gatsby-ui'
 
-export default props => <Container maxWidth="measureWide" {...props} />
+export default props => <Container mt={[3, 4, 5]} maxWidth="measureWide" {...props} />
 
 # John Otander
 
