Use gatsby-theme-sideways

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,29 +1,8 @@
-# Hello, my name is John Otander. I 🖤 building things. Especially things that blur the lines between design and development. I 🖤 components and simplicity.
+# Hello, I'm John
 
-#### Find me on the web
+I'm a web developer and designer that builds things. Lots of things.
 
-- [GitHub][gh]
-- [Twitter][tw]
-
-#### Check out what I'm working on
-
-- [MDX][mdx]
-- [Compositor][c8r]
-- [Kit][kit]
-- [x0][x0]
-- [Styled System][sys]
-- [Standard Components][std]
-- [Random A11y][rand]
-- [CSS Stats][css]
-- [... and other stuff][gh]
+Check out my projects on [GitHub][gh] or follow me on [Twitter][tw]
 
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
-[c8r]: https://compositor.io
-[mdx]: https://github.com/mdx-js/mdx
-[kit]: https://github.com/c8r/kit
-[x0]: https://github.com/c8r/x0
-[sys]: https://github.com/jxnblk/styled-system
-[std]: https://github.com/standard-components
-[rand]: https://github.com/johno/random-a11y
-[css]: https://cssstats.com
