--- a/src/posts/github-actions-with-lerna.mdx
+++ b/src/posts/github-actions-with-lerna.mdx
@@ -3,6 +3,7 @@ title: GitHub Actions with lerna
 date: 2019-01-03
 path: /github-actions-lerna
 archived: false
+draft: false
 tags:
   - tooling
   - github-actions
