--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,8 @@
-# Hello, I'm John
+# Hello, I'm [John](/about)
 
 I'm a web developer and designer that builds things. Lots of things.
 
-Check out my projects on [GitHub][gh] or follow me on [Twitter][tw]
+Check out my projects on [GitHub][gh] or follow me on [Twitter][tw].
 
 [gh]: https://github.com/johno
 [tw]: https://twitter.com/4lpine
