Move draft mdx post to drafts

--- a/notes/drafts/mdx.mdx
+++ b/notes/drafts/mdx.mdx
@@ -2,7 +2,6 @@
 title: MDX
 date: 2019-02-20
 path: /mdx
-draft: true
 tags:
   - mdx
 ---
@@ -92,6 +91,15 @@ UI is best expressed declaratively, and with JSX that's the pit of success.
 This brings us to the notion of "authorable".
 I realized we were onto something pretty quickly with MDX because I suddenly found myself writing again.
 MDX quickly became my journal for sketching out concepts and ideas because I could write out a problem that needed to be solved, and then code up a solution in line.
+
+## The implementation
+
+After spending some free time over the next few weeks with remark and how to combine it with JSX/React I finally began to start a real implementation.
+
+https://mobile.twitter.com/jhooks/status/1103156653967306752
+
+The first commit was small and consisted of nothing but an AST snapshot test.
+
 
 ## The MDXProvider
 
