Add composition blurb

--- a/posts/authorable-format.mdx
+++ b/posts/authorable-format.mdx
@@ -34,6 +34,10 @@ If you go all in on JSX, you can import special one-off components at the page l
 
 This is an incredibly liberating authoring experience. It's also explicit and unsurprising.
 
+### Composition
+
+Being able to introduce functionality via composition is another powerful feature. No longer do you need to apply global plugins to your app or use special syntax. With composition you can import a component that's meant for a particular thing, like a live code editor, and then use it precisely where you need it. It's simple but elegant.
+
 ## WYSIWYG editing
 
 Though MDX is an authorable format, it's unrealistic to expect everyone to enjoy writing it. That's where the WYSIWYG comes into play. It can serve as an editing abstraction that sits on top of MDX.
