Add build your own

--- a/posts/authorable-format.mdx
+++ b/posts/authorable-format.mdx
@@ -62,4 +62,4 @@ There's a lot in store for the future as well. [Brent Jackson](https://twitter.c
 
 ---
 
-Thanks to [@chrisbiscardi](https://twitter.com/chrisbiscardi) and [@jarredsumner](https://twitter.com/jarredsumner) who have been working with me on this unnamed MDX editor prototype to try and make it a reality.
+Thanks to [@chrisbiscardi](https://twitter.com/chrisbiscardi), [@jarredsumner](https://twitter.com/jarredsumner), and [@nately89](https://twitter.com/Nately89) who have been working with me on this unnamed MDX editor prototype to try and make it a reality.
