More wording refinements

--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -6,7 +6,7 @@ date: 2019-03-19
 
 # Guessable
 
-Productivity is the ultimate goal we seek to achieve with software, tools, and products. Though, it's often easy to forget what's needed to achieve it. Productivity requires predictability, trust, and intuitiveness. It requires reducing cognitive overhead. In essence, this means a tool is guessable.
+When building and designing applications and websites we want to be productive and efficient. It's often easy to forget what's needed to achieve it, especially when we're lost in complex systems. Productivity requires predictability, ease of use, and intuitiveness. Efficient means little cognitive overhead and making prototyping as rapid as possible. In essence, this means an API is guessable.
 
 Let's consider a UI library that has a collection of colors. We have a Text component that accepts a `color` prop for any color in the design system. We can specify the color naming in a multitude of ways. One of the more popular naming schemes is reminiscent of color names, so you have something like:
 
@@ -92,10 +92,14 @@ I wouldn't call `yarn` perfect either. Some of it's guessability is lost when yo
 
 It makes sense to have different needs in an API. In fact you might even want to purposefully _evolve_ the API. However, from a tooling standpoint like `yarn`, it'd be nearly no overhead to alias the `ls` command with a soft warning to use `list`.
 
-When making guessable software we often overlook this aspect. We should more gently steer towards the direction we might think is better, but to respect the tooling that came before it. We should ease the transition.
+When making guessable software we often overlook this aspect. We should more gently steer towards the direction we might think is better, but to respect the tooling that came before it. We should ease the transition and not leave people getting frustrated and then typing in `-h` and being presented with a terminal filled with 50 or so options.
 
 ## Community buy in
 
 As tools and ideas begin to converge we might even be lucky enough to see common standards become accepted. This includes ideas like the Styled System Theme Specification that seeks to standardize the commonalities in a design system's `theme.js`. When a community arrives at a common spec, everyone benefits.
 
 I hope to see other tools converge on standards and guessable APIs that leave end users feeling productive and confident.
+
+## Convention
+
+Buy in is often represented by tooling authors and the greater community. When patterns develop we start to see conventions. When we're lucky we also see standards.
