Add some relevant links

--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -53,7 +53,8 @@ dealing with unnecessary cognitive overhead.
 
 ## Numeric scales
 
-Libraries like Tachyons, Basscss, and Styled System helped to introduce the concept of
+Libraries like [Tachyons](https://tachyons.io), [Basscss](http://basscss.com),
+and [Styled System](https://styled-system.com) helped to introduce the concept of
 numeric scales at the design system level. This helped to remove the overhead of
 figuring out color or spacing because you could increment classes or props to
 achieve a larger/smaller or darker/lighter effect. This helped to pioneer rapid
@@ -122,7 +123,8 @@ Something that's guessable needs to be memorable. This is often achieved
 by an API that is explicit, simple, and draws from concepts that are
 already understood by end users.
 
-Gatsby Themes introduced a concept known as component shadowing and I
+[Gatsby Themes](https://www.gatsbyjs.org/blog/2018-11-11-introducing-gatsby-themes/)
+introduced a concept known as component shadowing and I
 think it's a perfect example. The idea with this feature is that users
 of a theme can override a component or functionality by using a folder
 naming convention.
