--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -108,9 +108,9 @@ For everyone building with the system, it's guessable. Quickly being able to mov
 up and down a scale, even when you can't remember which way is which, allows you to
 rapidly make tweaks that adhere to a larger design system.
 
-### Consistency
+### Predictability
 
-These scales should persist throughout a design system wherever relevant.
+These scales can persist throughout a design system wherever relevant.
 When this occurs, many aspects suddenly become guessable without
 familiarity with the property. If you're dealing with box shadows and
 you need a Card component to have more depth and you're presented with
@@ -168,7 +168,7 @@ want with your package manager. It also automatically adds a dependency to your
 `package.json` after you `yarn add`. This is another subtle difference but greatly
 benefits new users.
 
-It removes the need for guessing because default behaviors are built in.
+It even _removes_ the need for guessing because default behaviors are built in.
 
 ### It's not perfect
 
@@ -198,9 +198,9 @@ terminal filled with 50 or so options.
 
 As tools and ideas begin to converge we might even be lucky enough to see
 common standards become accepted. This includes ideas like the Styled System
-Theme Specification that seeks to standardize the commonalities in a design
-system's `theme.js`. When a community arrives at a common spec, everyone
-benefits.
+[Theme Specification](https://styled-system.com/theme-specification)
+that seeks to standardize the commonalities in a design system's `theme.js`.
+When a community arrives at a common spec, everyone benefits.
 
 I hope to see other tools converge on standards and guessable APIs that leave end
 users feeling productive and confident.
