--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -106,7 +106,7 @@ For everyone building with the system, it's guessable. Quickly being able to mov
 up and down a scale, even when you can't remember which way is which, allows you to
 rapidly make tweaks that adhere to a larger design system.
 
-### Predictability
+## Discoverable
 
 These scales can persist throughout a design system wherever relevant.
 When this occurs, many aspects suddenly become guessable without
