--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -152,7 +152,7 @@ debugging experience.
 
 This inspires confidence in the system because you're not punished for guessing.
 
-When a designer or developer knows a change will show up in the browser in 1s,
+When a designer or developer knows a change will show up in the browser in one second,
 they're happier to work with the constraints because the feedback loop is instant.
 They can iterate towards the end product without having to consult long docs or
 reading the source code of a component. The process is fluid.
