--- a/posts/guessable.mdx
+++ b/posts/guessable.mdx
@@ -208,7 +208,7 @@ the tooling that came before it. We should ease the transition and not leave
 people getting frustrated and then typing in `-h` and being presented with a
 terminal filled with 50 or so options.
 
-### Divergence
+### Two ways to do one thing
 
 When two tools diverge, or address the same tooling concerns like npm and yarn we
 end up with a lot of cognitive overhead. This is a massive impedance to guessability.
