Begin spiking out composition over configuration posts

--- a/posts/styled-system-button.mdx
+++ b/posts/styled-system-button.mdx
@@ -1,5 +1,5 @@
 ---
-title: Building a button with Styled System
+title: Building a beautiful, reusable button with Styled System
 path: /styled-system-button
 date: 2019-03-25
 ---
