--- a/posts/composition-over-configuration.mdx
+++ b/posts/composition-over-configuration.mdx
@@ -5,13 +5,42 @@ date: 2019-03-26
 ---
 
 Composition is powerful because it's a "simple" abstraction that's
-meant to combine functionality.
+meant to combine functionality between two parts.
+
+In essence, composition can be boiled down to:
+
+##### [Object composition](https://en.wikipedia.org/wiki/Object_composition)
+
+```js
+const newThing = {
+  ...someValues,
+  color: 'tomato'
+}
+```
+
+##### Or [functional composition](https://en.wikipedia.org/wiki/Function_composition_(computer_science)):
+
+```js
+f(g(x))
+```
+
+For the purposes of this post we'll be mostly focusing on functional
+composition and how it relates to components.
 
 ## Components over configuration
 
 In the frontend world we're already operating with a compositional
 abstraction, the very components we're working with day in and day
-out.
+out. We operate with a syntactic wrapper (JSX) and pass data to
+a tree of components to render UI. Technically speaking JSX is a
+Domain Specific Language (DSL), but it's one that is generally accepted
+in the wider community and really isn't much more than a shortcut
+for function calls.
+
+JSX and components provide an expressive way to express composition
+that can cut out configuration in a lot of cases. This is a good thing
+because composition is only introduced where it's invoked and doesn't
+cause global side effects.
 
 ### Natural layering
 
@@ -32,10 +61,10 @@ Component composition allows you to layer specific needs.
 <Citation photographer="Fred Flintstone" />
 ```
 
-#### Components can be abstracted
+##### Components can be abstracted
 
 ```js
-<Image src="12345" alt="numbers" photography="Fred Flintstone" />
+<ImageWithCitation src="12345" alt="numbers" photography="Fred Flintstone" />
 ```
 
 ### Combining common elements
@@ -50,6 +79,13 @@ to immediately port the existing usage right away. That can happen
 over time. Additionally, when there are edge cases that need some type
 of one-off functionality you find yourself working at the component
 layer rather than overloading a plugin, syntax, or configuration option.
+
+### Breaking them back apart
+
+Similarly to Legos you can break apart components when further customization
+is needed. Libraries can expose more "batteries included" components as
+the primary API surface area which can be broken back apart to create something
+more bespoke.
 
 ## Configuration is (typically) global
 
@@ -80,7 +116,12 @@ built in.
 
 ## Conclusion
 
-Configuration-based systems are necessary
+Configuration-based systems are necessary at low-levels to ensure underlying
+tooling is flexible. This posts isn't meant as a jab at any of the tools we
+use on a day-to-day basis. In fact, I love that they're so flexible and pluggable
+so we can focus time and energy on making those tools bulletproof for the greater
+community. However, for the vast majority of developers, we can work at the
+next layer of abstraction which can, and should, favor composition.
 
 ## Related
 
