--- a/posts/composition-over-configuration.mdx
+++ b/posts/composition-over-configuration.mdx
@@ -5,7 +5,9 @@ date: 2019-03-26
 ---
 
 Composition is powerful because it's a "simple" abstraction that's
-meant to combine functionality between two parts.
+meant to combine functionality between two otherwise separate parts.
+It tends to be less leaky than configuration-based approaches and
+avoids framework coupling in convention-based approaches.
 
 In essence, composition can be boiled down to:
 
