--- a/posts/styled-system-button.mdx
+++ b/posts/styled-system-button.mdx
@@ -333,6 +333,13 @@ This is a great workflow for when you want to add spacing quickly and efficientl
 of markup. By default, it will ensure that design system scales will be used so that things
 remain consistent.
 
+## What else?
+
+You can continue going further with other style functions for `box-shadow`, `line-height`,
+and more.
+
+[See the Styled System table of functions](https://styled-system.com/table)
+
 ## Conclusion
 
 Using this approach you can create components that can do essentially anything.
